--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 header{
-    position:fixed;
+    position:block;
     top: 0;
     left:0;
     width: 100%;
@@ -53,4 +53,12 @@ nav a.active{
     color: var(--main-color);
     
 }
+main {
+    width: 100%;
+    background-color: var(--second-bg-color);
+}
+.my-presentation {
+    
+}
+
 
