--- a/styles/style.css
+++ b/styles/style.css
@@ -53,12 +53,40 @@ nav a.active{
     color: var(--main-color);
     
 }
-main {
+section {
+    position: absolute;
     width: 100%;
-    background-color: var(--second-bg-color);
-}
-.my-presentation {
+    height: 100%;
+    padding: 10rem 9% 2rem;
     
+}
+.home {
+    display: flex;
+    align-items: center;
+    background-color: var(--bg-color);
+}
+.home-detail {
+    color: var(--white-color);
+}
+.home h1 {
+    font-size: 5rem;
+}
+.home h2 {
+    font-size: 3.5rem;
+    margin-top: -1.5rem;
+}
+.home p {
+    font-size: 1.5rem;
+}
+.btn-box{
+    padding-top: 2rem;
+}
+.btn-hire {
+    font-size: 2.5rem;
+    color: var(--white-color);
+    border:2px solid var(--white-color);
+    padding:0.5rem 1.5rem;
+    border-radius: 3rem;
 }
 
 
