--- a/styles/style.css
+++ b/styles/style.css
@@ -79,14 +79,30 @@ section {
     font-size: 1.5rem;
 }
 .btn-box{
-    padding-top: 2rem;
+    padding-top: 4rem;
 }
 .btn-hire {
     font-size: 2.5rem;
-    color: var(--white-color);
-    border:2px solid var(--white-color);
+    font-weight: 500;
+    color: var(--bg-color);
+    border:2px solid var(--main-color);
     padding:0.5rem 1.5rem;
     border-radius: 3rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 30px rgba(124, 240, 61, 0.5),
+                0 0 20px rgba(124, 240, 61, 0.5),
+                0 0 10px rgba(124, 240, 61, 0.5);
+    transition: 0.5s;
 }
+.btn-hire:hover{
+    color: var(--main-color);
+    border:2px solid var(--main-color);
+    padding:0.5rem 1.5rem;
+    box-shadow: none;
+    background-color: var(--bg-color);
+
+}
+
+
 
 
