--- a/styles/style.css
+++ b/styles/style.css
@@ -80,13 +80,15 @@ section {
 }
 .btn-box{
     padding-top: 4rem;
+    display: flex;
+    gap: 5rem;
 }
 .btn-hire {
     font-size: 2.5rem;
     font-weight: 500;
     color: var(--bg-color);
     border:2px solid var(--main-color);
-    padding:0.5rem 1.5rem;
+    padding:0.5rem 2.5rem;
     border-radius: 3rem;
     background-color: var(--main-color);
     box-shadow: 0 0 30px rgba(124, 240, 61, 0.5),
@@ -97,10 +99,32 @@ section {
 .btn-hire:hover{
     color: var(--main-color);
     border:2px solid var(--main-color);
-    padding:0.5rem 1.5rem;
+    padding:0.5rem 2.5rem;
     box-shadow: none;
     background-color: var(--bg-color);
 
+}
+.btn-download {
+    color: var(--main-color);
+    border:2px solid var(--main-color);
+    padding:0.5rem 2.5rem;
+    box-shadow: none;
+    background-color: var(--bg-color);
+    border-radius: 3rem;
+    font-size: 2.5rem;
+}
+.btn-download:hover{
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: var(--bg-color);
+    border:2px solid var(--main-color);
+    padding:0.5rem 2.5rem;
+    border-radius: 3rem;
+    background-color: var(--main-color);
+    box-shadow: 0 0 30px rgba(124, 240, 61, 0.5),
+                0 0 20px rgba(124, 240, 61, 0.5),
+                0 0 10px rgba(124, 240, 61, 0.5);
+    transition: 0.5s;
 }
 
 
