--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ header{
     padding:2rem 9%;
     background-color: var(--bg-color);
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
@@ -57,7 +58,7 @@ section {
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 10rem 9% 2rem;
+    padding: 10em 9% 2rem;
     
 }
 .home {
@@ -131,19 +132,3 @@ section {
                 0 0 10px rgba(124, 240, 61, 0.5);
     transition: 0.5s;
 }
-.home-img-container {
-    width: 32vw;
-    height:32vw;
-    min-width: 200px; 
-    min-height: 200px;
-    max-width: 500px; 
-    max-height: 500px;
-    background-color: #ffffff;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-
-}
-
