--- a/styles/style.css
+++ b/styles/style.css
@@ -54,31 +54,25 @@ nav a.active{
     color: var(--main-color);
     
 }
-section {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 10em 9% 2rem;
-    
-}
+
 .home {
     display: flex;
-    gap:  5rem;
+    height: 100vh;
+    padding: 60px 9% 0;
     align-items: center;
+    justify-content: space-between;    
     background-color: var(--bg-color);
-    flex-wrap: wrap-reverse;
-    justify-content: center;
     
 }
 .home-detail {
     color: var(--white-color);
 }
 .home h1 {
-    font-size: 5rem;
+    font-size: 5.5rem;
 }
 .home h2 {
-    font-size: 3.5rem;
-    margin-top: -1.5rem;
+    font-size: 3.2rem;
+    margin-top: -1rem;
 }
 .home p {
     font-size: 1.5rem;
