--- a/styles/style.css
+++ b/styles/style.css
@@ -46,15 +46,15 @@ nav a {
     
 font-size: 3rem;
     color: var(--white-color);
-    font-weight: 200;
+    font-weight: 230;
     margin-left: 7rem;
-    padding: 0.5rem 1rem; 
+    padding: 1rem 2rem; 
     box-sizing: border-box;
     letter-spacing: 1px; 
     transition: all 0.3s ease; 
     text-decoration: none; 
     display: inline-block; 
-    width: 120px; 
+    width: 160px; 
     text-align: center;
 }
 nav a:hover{
@@ -72,6 +72,9 @@ nav a:hover{
 }
 .home__detail {
     color: var(--white-color);
+}
+.home__detail .tpdtext{
+    color: #7cf03d;
 }
 .home h1 {
     font-size: 7rem;
