--- a/styles/style.css
+++ b/styles/style.css
@@ -21,8 +21,15 @@ html{
 }
 
 body {
+    padding: 100px;
+    background-image: url('/images/SL-120722-54400-38.jpg');
     background-color: var(--white-color);
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+
 }
+
 
 header{
     position:block;
@@ -36,10 +43,11 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    border-radius: 30px 30px 0px 0px;
     
 }
 .logo {
-    font-size: 5rem;
+    font-size: 3rem;
     color: var(--white-color);
     font-weight: 700;
 }
@@ -59,8 +67,9 @@ font-size: 3rem;
     text-align: center;
 }
 nav a:hover{
-    border-bottom: 2.7px solid white;
+
     font-weight: 500;
+    
 }
 .home {
     display: flex;
@@ -140,7 +149,10 @@ nav a:hover{
                 0 0 10px rgba(124, 240, 61, 0.5);
     transition: 0.5s;
 }
-
+footer{
+    background-color: #fff;
+    border-radius: 0px 0px 30px 30px;
+}
 .copy-rights{
     font-size: 2rem;
     text-align: center;
